[waybar] fix shifting height
I was noticing that the waybar, and thus the sway windows / river views
would shift sometimes, when switching between workspaces (/ tags).

Using the debugging features in waybar, it seems to be caused by modules
changing their required height, likely due to excess padding-bottom.
The window module is the most likely culprit since it changes quite a
bit when switching workspaces.

The fix here is to reduce padding and declare a taller min-height of
28px to get the look close to what it was before.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -20,8 +20,8 @@
   border-radius: 0;
   font-family: "OCR A";
   /* font-family: "Kode Mono"; */
-  font-size: 14px;
-  min-height: 14px;
+  font-size: 15px;
+  min-height: 28px;
   border: none;
 
 }
@@ -76,7 +76,7 @@ tooltip {
   background-color: #ebcb8b;
   border-bottom: solid 1px #b0e0e6;
   border-right: solid 1px #b0e0e6;
-  padding: 5px 10px 5px 10px;
+  padding: 0px 5px 0px 5px;
 }
 
 #window {
@@ -85,7 +85,7 @@ tooltip {
   border-bottom: solid 1px #b0e0e6;
   border-left: solid 1px #b0e0e6;
   border-right: solid 1px #b0e0e6;
-  padding: 5px 10px 5px 10px;
+  padding: 0px 5px 0px 5px;
 }
 
 /* #window:blank { */
@@ -106,7 +106,7 @@ tooltip {
 #custom-launcher,
 #custom-power,
 #custom-pacman {
-  padding: 5px 10px 5px 10px;
+  padding: 0px 10px 0px 10px;
   background-color: #000;
   color: #b0e0e6;
   border-right: solid 1px #b0e0e6;
